--- a/Web/05.Recommendation.ipynb
+++ b/Web/05.Recommendation.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "1  186  302  3  891717742"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +93,6 @@
     "\n",
     "# 사용자 평점 데이터 불러오기\n",
     "df = pd.read_csv('./data/ml-100k/u.data', sep='\\t', header=None)\n",
-    "\n",
-    "num_users  = len(df[0].drop_duplicates().tolist())  \n",
     "movies_rated  = list(df[1]) \n",
     "counts = collections.Counter(movies_rated)\n",
     "df.head(2)"
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +204,7 @@
        "[2 rows x 24 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,70 +212,62 @@
    "source": [
     "# https://stackoverflow.com/questions/18171739/unicodedecodeerror-when-reading-csv-file-in-pandas-with-python\n",
     "# 데이터 영화목록 불러오기\n",
-    "df_info = pd.read_csv('./data/ml-100k/u.item', sep='|', header=None, encoding = \"ISO-8859-1\")\n",
-    "\n",
-    "# 영화목록 추출\n",
-    "movie_list = [df_info[1].tolist()[ indx ] + ';' + str(indx+1) \n",
-    "              for indx in range(len(df_info[1].tolist())) ]\n",
-    "num_movies = len(movie_list)\n",
+    "df_info = pd.read_csv('./data/ml-100k/u.item', \n",
+    "                      sep='|', header=None, encoding = \"ISO-8859-1\")\n",
+    "# 영화목록 추출 (index 라인 번호를 제목 뒤에 덧붙임)\n",
+    "movie_list = [df_info[1].tolist()[ index_num ] + ';' + str(index_num+1) \n",
+    "              for index_num in range(len(df_info[1].tolist())) ]\n",
     "df_info.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [user, Toy Story (1995);1, GoldenEye (1995);2, Four Rooms (1995);3, Get Shorty (1995);4, Copycat (1995);5, Shanghai Triad (Yao a yao yao dao waipo qiao) (1995);6, Twelve Monkeys (1995);7, Babe (1995);8, Dead Man Walking (1995);9, Richard III (1995);10, Seven (Se7en) (1995);11, Usual Suspects, The (1995);12, Mighty Aphrodite (1995);13, Postino, Il (1994);14, Mr. Holland's Opus (1995);15, French Twist (Gazon maudit) (1995);16, From Dusk Till Dawn (1996);17, White Balloon, The (1995);18, Antonia's Line (1995);19, Angels and Insects (1995);20, Muppet Treasure Island (1996);21, Braveheart (1995);22, Taxi Driver (1976);23, Rumble in the Bronx (1995);24, Birdcage, The (1996);25, Brothers McMullen, The (1995);26, Bad Boys (1995);27, Apollo 13 (1995);28, Batman Forever (1995);29, Belle de jour (1967);30, Crimson Tide (1995);31, Crumb (1994);32, Desperado (1995);33, Doom Generation, The (1995);34, Free Willy 2: The Adventure Home (1995);35, Mad Love (1995);36, Nadja (1994);37, Net, The (1995);38, Strange Days (1995);39, To Wong Foo, Thanks for Everything! Julie Newmar (1995);40, Billy Madison (1995);41, Clerks (1994);42, Disclosure (1994);43, Dolores Claiborne (1994);44, Eat Drink Man Woman (1994);45, Exotica (1994);46, Ed Wood (1994);47, Hoop Dreams (1994);48, I.Q. (1994);49, Star Wars (1977);50, Legends of the Fall (1994);51, Madness of King George, The (1994);52, Natural Born Killers (1994);53, Outbreak (1995);54, Professional, The (1994);55, Pulp Fiction (1994);56, Priest (1994);57, Quiz Show (1994);58, Three Colors: Red (1994);59, Three Colors: Blue (1993);60, Three Colors: White (1994);61, Stargate (1994);62, Santa Clause, The (1994);63, Shawshank Redemption, The (1994);64, What's Eating Gilbert Grape (1993);65, While You Were Sleeping (1995);66, Ace Ventura: Pet Detective (1994);67, Crow, The (1994);68, Forrest Gump (1994);69, Four Weddings and a Funeral (1994);70, Lion King, The (1994);71, Mask, The (1994);72, Maverick (1994);73, Faster Pussycat! Kill! Kill! (1965);74, Brother Minister: The Assassination of Malcolm X (1994);75, Carlito's Way (1993);76, Firm, The (1993);77, Free Willy (1993);78, Fugitive, The (1993);79, Hot Shots! Part Deux (1993);80, Hudsucker Proxy, The (1994);81, Jurassic Park (1993);82, Much Ado About Nothing (1993);83, Robert A. Heinlein's The Puppet Masters (1994);84, Ref, The (1994);85, Remains of the Day, The (1993);86, Searching for Bobby Fischer (1993);87, Sleepless in Seattle (1993);88, Blade Runner (1982);89, So I Married an Axe Murderer (1993);90, Nightmare Before Christmas, The (1993);91, True Romance (1993);92, Welcome to the Dollhouse (1995);93, Home Alone (1990);94, Aladdin (1992);95, Terminator 2: Judgment Day (1991);96, Dances with Wolves (1990);97, Silence of the Lambs, The (1991);98, Snow White and the Seven Dwarfs (1937);99, ...]\n",
-      "Index: []\n",
-      "\n",
-      "[0 rows x 1683 columns]\n"
+      "(0, 1683)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>Toy Story (1995);1</th>\n",
+       "      <th>GoldenEye (1995);2</th>\n",
+       "      <th>Four Rooms (1995);3</th>\n",
+       "      <th>Get Shorty (1995);4</th>\n",
+       "      <th>Copycat (1995);5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [user, Toy Story (1995);1, GoldenEye (1995);2, Four Rooms (1995);3, Get Shorty (1995);4, Copycat (1995);5]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_out = pd.DataFrame(columns=['user']+movie_list)\n",
-    "df_out  # 영화의 목록을 컬럼으로 생성"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32.6869 sec\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 사용자 리뷰중 50개 이하의 영화 리뷰를 작성한 사람들의 데이터는 제거한다\n",
-    "min_ratings = 50  \n",
-    "to_removelist = []; t0 = time()\n",
-    "\n",
-    "for i in range(1,num_users):\n",
-    "    tmp_movielist = [0 for j in range(num_movies)]\n",
-    "    df_tmp = df[df[0] == i]\n",
-    "    for k in df_tmp.index:\n",
-    "        if counts[ df_tmp.ix[k][1] ] >= min_ratings:\n",
-    "            tmp_movielist[ df_tmp.ix[k][1] -1 ] = df_tmp.ix[k][2]\n",
-    "        else: to_removelist.append(df_tmp.ix[k][1])\n",
-    "    df_out.loc[i] = [i] + tmp_movielist   # df의 사용자 리뷰 데이터를 df_out 에 첨부\n",
-    "\n",
-    "to_remove_list = list(set(to_removelist))\n",
-    "df_out.drop(df_out.columns[ to_removelist ], axis = 1, inplace = True)\n",
-    "df_out.to_csv('data/utilitymatrix.csv', index = None)\n",
-    "print(round(time()-t0,4),'sec'); df_out.iloc[:4,:6]"
+    "print(df_out.shape)\n",
+    "df_out.ix[:,:6]  # 영화의 목록을 컬럼으로 생성"
    ]
   },
   {
@@ -288,10 +278,122 @@
    },
    "outputs": [],
    "source": [
-    "df_out.shape\n",
+    "min_ratings = 50  # 작성자 리뷰중 50개 이하만 기록된 영화 데이터는 제거\n",
+    "num_users  = len(df[0].drop_duplicates().tolist()) # 전체 사용자 수  \n",
+    "num_movies = len(movie_list) # 전체 영화 수\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31.0997 sec\n",
+      "(942, 604)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user</th>\n",
+       "      <th>Toy Story (1995);1</th>\n",
+       "      <th>GoldenEye (1995);2</th>\n",
+       "      <th>Four Rooms (1995);3</th>\n",
+       "      <th>Get Shorty (1995);4</th>\n",
+       "      <th>Copycat (1995);5</th>\n",
+       "      <th>Twelve Monkeys (1995);7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user  Toy Story (1995);1  GoldenEye (1995);2  Four Rooms (1995);3  \\\n",
+       "1   1.0                 5.0                 3.0                  4.0   \n",
+       "2   2.0                 4.0                 0.0                  0.0   \n",
+       "3   3.0                 0.0                 0.0                  0.0   \n",
+       "\n",
+       "   Get Shorty (1995);4  Copycat (1995);5  Twelve Monkeys (1995);7  \n",
+       "1                  3.0               3.0                      4.0  \n",
+       "2                  0.0               0.0                      0.0  \n",
+       "3                  0.0               0.0                      0.0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_removelist = []; t0 = time()\n",
+    "for i in range(1, num_users):\n",
+    "    tmp_movielist = [0 for j in range(num_movies)]\n",
+    "    df_tmp = df[df[0] == i]\n",
+    "\n",
+    "    for k in df_tmp.index:\n",
+    "        if counts[ df_tmp.ix[k][1] ] >= min_ratings:\n",
+    "            tmp_movielist[ df_tmp.ix[k][1] -1 ] = df_tmp.ix[k][2]\n",
+    "        else: to_removelist.append(df_tmp.ix[k][1])\n",
+    "    df_out.loc[i] = [i] + tmp_movielist   # df의 사용자 리뷰 데이터를 df_out 에 첨부\n",
+    "\n",
+    "to_remove_list = list(set(to_removelist))\n",
+    "df_out.drop(df_out.columns[ to_removelist ], axis = 1, inplace = True)\n",
+    "df_out.to_csv('data/utilitymatrix.csv', index = None)\n",
+    "print(round(time()-t0,4),'sec'); print(df_out.shape); df_out.iloc[:3,:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 01 내용 정리\n",
     "# 총 1683개의 영화에 대한 개별 사용자의 평점을 첨부한다\n",
-    "# 사용자가 모든 영화에 대한 리뷰를 작성하지는 않으므로, 50개 이하의 평점이 기록된 영화는 제거한다\n",
-    "# NaN 결측치에 대하여, 정상적인 작동을 위해 '대체'(imputation) 의 방법으로 결측치 초기화를 한다"
+    "# 50개 이하의 평점이 기록된 영화는 제거되어, 최종 604개의 영화기록이 정제된다"
    ]
   },
   {
@@ -299,13 +401,17 @@
    "metadata": {},
    "source": [
     "### 02 결측치 처리\n",
-    "대체 (imputation) : <strong>사용자의 평균 평점</strong>과 <strong>영화별 평균 평점</strong>을 대체에 사용한다"
+    "NaN 결측치는, '대체'(imputation)의 방법으로 초기화 한다\n",
+    "\n",
+    "대체 (imputation) : <strong>사용자의 평균 평점</strong>과 <strong>영화별 평균 평점</strong>을 대체에 사용한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def imputation(inp,Ri):\n",
@@ -323,25 +429,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 유틸리티 행렬 R은\n",
+    "# 사용자는 N명이고, 아이템은 M개가 된다"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<br></br>\n",
     "## 2 유사도 척도\n",
     "벡터 $X$와 $Y$의 유사도를 계산하기 위한 척도\n",
-    "1. 코사인 유사도 Cosine similarity\n",
+    "1. 코사인 유사도 Cosine similarity \n",
+    "$$ s(x,y) = \\frac{\\sqrt{\\sum x_i y_i}}{\\sqrt{\\sum x_i^2}\\sqrt{\\sum y_i^2}} $$\n",
     "2. 피어슨 상관관계 Pearson correlation\n",
+    "$$ s(x,y) = \\frac{\\sqrt{\\sum (x_i - \\bar x)(y_i - \\bar y)}}\n",
+    "{\\sqrt{\\sum (x_i - \\bar x)^2}\\sqrt{\\sum (y_i - \\bar y)^2}} $$\n",
+    "\n",
     "두 척도의 평균이 0인경우, 일치하게 된다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# scipy를 활용한 유사도 척도 함수\n",
     "from scipy.stats import pearsonr\n",
     "from scipy.spatial.distance import cosine \n",
     "def similarity(x,y,metric='cos'):\n",
@@ -360,11 +483,11 @@
     "<h4><strong>Collaborative Filtering methods</strong></h4>\n",
     "\"자신과 비슷한 사람들은, 좋아하는 아이템을 공유한다\"를 기반으로 한다\n",
     "\n",
-    "이는 사용자의 수많은 데이터를 필요로 하므로 <strong>Cold Start</strong>\n",
+    "이는 사용자의 수많은 데이터를 필요로 해서 발생하는 <strong>Cold Start</strong>\n",
     "\n",
-    "(<strong>가용 데이터 부족</strong>상태로, 반대로 <strong>Warm Start</strong>가 있다)가 문제가 되고 있다\n",
+    "(반대로 <strong>가용 데이터 부족</strong>의 <strong>Warm Start</strong>가 있다)가 문제가 되고 있다\n",
     "\n",
-    "이를 극복하기 위하여, <strong>CF</strong>와 <strong>CBF의 하이브리드</strong> 방식이 제안되곤 한다\n",
+    "이를 극복하기 위하여, <strong>CF</strong>와 <strong>CBF의 하이브리드</strong> 방식이 제안된다\n",
     "\n",
     "(콘텐츠의 내부적 분류로써, 사용자의 데이터를 더 세분화 한 데이터로 분석을 한다)\n",
     "<h4><strong>콘텐츠 기반 알고리즘의 이슈</strong></h4>\n",
@@ -379,17 +502,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><strong>1 메모리 기반의 협업 필터링</strong></h4>\n",
-    "Memory-based Collaborative Filtering 은 <strong>유틸리티 행렬</strong>을 사용하여 아이템의 유사도를 계산한다\n",
-    "<h4><strong>2 사용자 기반 협업 필터링</strong></h4>\n",
-    "User-based Collaborative Filtering 은 <strong> K-NN 알고리즘</strong>을 사용한다, \n",
+    "<h4>1. <strong>메모리 기반의 협업 필터링</strong> Memory-based Collaborative Filtering</h4> \n",
+    "<strong>유틸리티 행렬</strong>을 사용하여 아이템의 유사도를 계산한다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>2. <strong>사용자 기반 협업 필터링</strong> User-based Collaborative Filtering</h4>\n",
+    "<strong> K-NN 알고리즘</strong>으로, 유사 사용자들의 평점을 찾은 뒤 \n",
     "\n",
-    "유사 사용자들의 평점을 찾은 뒤 <strong>가중 평균</strong>하여, 현재 사용자의 누락 평점 대신에 사용된다\n",
-    "1. 사용자 $i$와 평가되지 않은 아이템 $j$를 특정한다\n",
-    "2. 유사도 척도 $s$를 사용하여 $j$아이템에 유사평점을 준 사용자 $K$를 찾는다 ($K$ 이웃의 수는 20~50 사이값을 사용한다)\n",
-    "3. $K$들의 평점을 가중평균하여, 사용자 $i$의 평점을 예측한다\n",
-    "4. 균질적인 평점을 비교하기 위하여, 평점분포를 정규화 한다\n",
-    "5. 예측평균이 1보다 작거나, 5보다 큰경우, 1과 5로 조정된다"
+    "<strong>가중 평균</strong>으로,누락 평점 대신에 사용된다\n",
+    "1. 사용자 $i$와 <strong>평가되지 않은 아이템 $j$</strong>를 특정\n",
+    "2. <strong>유사도 척도 $s$</strong>를 사용, $j$아이템에 유사평점을 준 사용자 $K$를 찾는다 ($20 < K < 50$)\n",
+    "3. $K$들의 평점을 <strong>가중평균</strong>하여, 사용자 $i$의 평점을 예측한다\n",
+    "4. 균질적인 평점을 비교하기 위하여, <strong>평점분포를 정규화</strong> 한다\n",
+    "5. 예측평균이 1~5 기본 척도값 이외가 나온경우, 최소값은 1, 최대값은 5로 조정"
    ]
   },
   {
@@ -459,7 +588,101 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 위 함수 사용해본 결과\n",
+    "# 피어슨 상관관계가 조금 더 결과가 좋은데, 사용자의 평균평점을 제외한채 사용하기 때문으로 보인다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>2. <strong>아이템 기반의 협업 필터링</strong> Item-based Collaborative Filtering</h4> \n",
+    "<strong>아이템에 대해 유사도가 측정</strong>된다는 점을 제외하고는 개념적으로, 사용자기반과 동일하다\n",
+    "1. <strong>유사도 측정치 $s$</strong>를 사용하여, 사용자 $i$가 평가한 아이템과 가장 <strong>비슷한 아이템을 $K$개</strong> 찾는다\n",
+    "2. $K$개 아이템 평점을 가중평균하여 예측평점으로 계산한다\n",
+    "$$ P_{ij} = \\frac{\\sum S(j,k)r_{ik}}{|\\sum{S(j,k)}|} $$\n",
+    "\n",
+    "유사도 측정결과 음수도 가능하므로, <strong>가중 평균의 유효성을 높이기 위해서</strong> 양수값들만의 가중평균을 사용하면 더 효과적이다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class CF_itembased(object):\n",
+    "    def __init__(self,data):\n",
+    "        #calc item similarities matrix\n",
+    "        nitems = len(data[0])\n",
+    "        self.data = data\n",
+    "        self.simmatrix = np.zeros((nitems,nitems))\n",
+    "        for i in xrange(nitems):\n",
+    "            for j in xrange(nitems):\n",
+    "                if j>=i: # tri-angular matrix\n",
+    "                    self.simmatrix[i,j] = sim(data[:,i],data[:,j])\n",
+    "                else: self.simmatrix[i,j] = self.simmatrix[j,i]\n",
+    "\n",
+    "    def GetKSimItemsperUser(self,r,K,u_vec):\n",
+    "        items = np.argsort(self.simmatrix[r])[::-1]\n",
+    "        items = items[items!=r]\n",
+    "        cnt=0\n",
+    "        neighitems = []\n",
+    "        for i in items:\n",
+    "            if u_vec[i]>0 and cnt<K:\n",
+    "                neighitems.append(i)\n",
+    "                cnt+=1\n",
+    "            elif cnt==K: break\n",
+    "        return neighitems\n",
+    "        \n",
+    "    def CalcRating(self,r,u_vec,neighitems):\n",
+    "        rating = 0.\n",
+    "        den = 0.\n",
+    "        for i in neighitems:\n",
+    "            rating +=  self.simmatrix[r,i]*u_vec[i]\n",
+    "            den += abs(self.simmatrix[r,i])\n",
+    "        if den>0:\n",
+    "            rating = np.round(rating/den,0)\n",
+    "        else:\n",
+    "            rating = np.round(self.data[:,r][self.data[:,r]>0].mean(),0)\n",
+    "        return rating\n",
+    "        \n",
+    "    def CalcRatings(self,u_vec,K,indxs=False):\n",
+    "        #u_rec = copy.copy(u_vec)\n",
+    "        u_rec = np.zeros(len(u_vec))\n",
+    "        for r in xrange(len(u_vec)):\n",
+    "            if u_vec[r]==0:\n",
+    "                neighitems = self.GetKSimItemsperUser(r,K,u_vec)\n",
+    "                #calc predicted rating\n",
+    "                u_rec[r] = self.CalcRating(r,u_vec,neighitems)\n",
+    "        if indxs:\n",
+    "            #take out the rated movies\n",
+    "            seenindxs = [indx for indx in xrange(len(u_vec)) if u_vec[indx]>0]\n",
+    "            u_rec[seenindxs]=-1\n",
+    "            recsvec = np.argsort(u_rec)[::-1][np.argsort(u_rec)>0]        \n",
+    "            return recsvec\n",
+    "        return u_rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 클래스 내용 정리\n",
+    "# simmatrix로 아이템 유사도 행렬을 계산한다\n",
+    "# 아이템의 사용자 평점이 없는 경우, CalcRatings로 '가중평균 평점'을 예측을 한다\n",
+    "# GetKSimItemsperUsers는 '사용자가 평가하지 않은 아이템과 유사도가 높은 아이템' 중\n",
+    "# 사용자가 과거에 평가했던 K개의 아이템을 찾는다\n",
+    "# 이웃을 찾을 수 없는 경우는, 아이템의 평균평점으로 설정한다\n",
+    "# u_vec 는 사용자 평점 벡터로, 유틸리티 행렬의 행 벡터다"
+   ]
   }
  ],
  "metadata": {
