--- a/Nltk/09.AR NLP.ipynb
+++ b/Nltk/09.AR NLP.ipynb
@@ -9,7 +9,9 @@
     "Knowing Is Believing (아는 것은 믿는 것이다)\n",
     "1. 담화 분석 소개\n",
     "2. 중심화 이론을 사용한 담화분석\n",
-    "3. 대용어 복원"
+    "3. 대용어 복원\n",
+    "\n",
+    "http://www.nltk.org/book/ch10.html   여기를 통해서 복습 정리함이 더 효과적이다"
    ]
   },
   {
@@ -18,9 +20,9 @@
    "source": [
     "<br></br>\n",
     "## 1 담화 분석\n",
-    "NER(Named-entity recognition), AR(Anaphora Resolution) 담화분석\n",
-    "1. Discourse Representation Theory (DRT) - AR을 수행하는 방법을 제공\n",
-    "2. Discourse Representation Structure (DRS) - 담화의 의미를 제공\n",
+    "<strong>NER</strong>(Named-entity recognition), <strong>대용어 분석</strong> (AR)Anaphora Resolution 를 활용한 담화분석\n",
+    "1. 이론을 활용한 사상의 표현 (DRT) Discourse Representation Theory  - AR을 수행하는 방법을 제공\n",
+    "2. 구조를 활용한 사상의 표현 (DRS) Discourse Representation Structure - 담화의 의미를 제공\n",
     "\n",
     "<img src=\"https://sourcecodebrowser.com/w3af/1.0~rc2svn3429/classextlib_1_1nltk_1_1sem_1_1logic_1_1_expression__coll__graph.png\" align=\"left\">"
    ]
@@ -30,7 +32,9 @@
    "metadata": {},
    "source": [
     "### 01 First Order Predicate Logic (FOPL) \n",
-    "명제 논리의 사실을 확장가능, text를 선형으로 변환한다"
+    "명제 논리의 사실을 확장가능, text를 선형으로 변환한다\n",
+    "\n",
+    "nltk.sem.logic() 을 활용"
    ]
   },
   {
@@ -62,8 +66,8 @@
     "expr1 = expr_read('([x], [John(x), Went(x)])')\n",
     "print(expr1)\n",
     "\n",
-    "# expr1.draw()   # 이미지로 출력\n",
-    "expr1.fol()"
+    "# expr1.draw()  # 이미지로 출력\n",
+    "expr1.fol()     # .fol() : DRS를 1차 술어 논리로 변환"
    ]
   },
   {
@@ -92,7 +96,7 @@
    "source": [
     "import nltk\n",
     "expr_read = nltk.sem.DrtExpression.fromstring\n",
-    "expr2 = expr_read('([x,y], [John(x), Went(x),Sam(y),Meet(x,y)])')\n",
+    "expr2 = expr_read('([x, y], [John(x), Went(x), Sam(y), Meet(x,y)])')\n",
     "\n",
     "print(expr2)\n",
     "#expr2.draw()\n",
@@ -125,7 +129,7 @@
    "source": [
     "import nltk\n",
     "expr_read = nltk.sem.DrtExpression.fromstring\n",
-    "expr3 = expr_read('([x], [John(x), eats(x)])+ ([y],[Sam(y),eats(y)])')\n",
+    "expr3 = expr_read('([x], [John(x), eats(x)]) + ([y], [Sam(y),eats(y)])')\n",
     "\n",
     "print(expr3)\n",
     "#expr3.draw()\n",
@@ -151,8 +155,7 @@
    "source": [
     "import nltk\n",
     "expr_read = nltk.sem.DrtExpression.fromstring\n",
-    "expr4 = expr_read('([],[(([x],[student(x)])->([y],[book(y),read(x,y)]))])')\n",
-    "\n",
+    "expr4 = expr_read('([],[(([x],[student(x)]) -> ([y],[book(y),read(x,y)]))])')\n",
     "expr4.fol()"
    ]
   },
@@ -173,8 +176,8 @@
    "source": [
     "import nltk\n",
     "expr_read = nltk.sem.DrtExpression.fromstring\n",
-    "expr5 = expr_read('([x,y],[ram(x),food(y),eats(x,y)])')\n",
-    "expr6 = expr_read('([u,z],[PRO(u),coffee(z),drinks(u,z)])')\n",
+    "expr5 = expr_read('([x, y], [ram(x), food(y), eats(x, y)])')\n",
+    "expr6 = expr_read('([u, z], [PRO(u), coffee(z), drinks(u, z)])')\n",
     "\n",
     "expr7 = expr5 + expr6\n",
     "print(expr7.simplify())\n",
@@ -243,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +271,7 @@
        " ('.', '.')]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +300,7 @@
        "0.9349006503968017"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,15 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3698\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3698"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -330,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +345,7 @@
        "0.8026879907509996"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,15 +369,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(('Others', 'NNS'), None), ((',', ','), None), (('which', 'WDT'), None), (('are', 'BER'), None), (('reached', 'VBN'), None), (('by', 'IN'), None), (('walking', 'VBG'), None), (('up', 'IN'), None), (('a', 'AT'), None), (('single', 'AP'), None), (('flight', 'NN'), None), (('of', 'IN'), None), (('stairs', 'NNS'), None), ((',', ','), None), (('have', 'HV'), None), (('balconies', 'NNS'), None), (('.', '.'), None)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(('Others', 'NNS'), None),\n",
+       " ((',', ','), None),\n",
+       " (('which', 'WDT'), None),\n",
+       " (('are', 'BER'), None),\n",
+       " (('reached', 'VBN'), None),\n",
+       " (('by', 'IN'), None),\n",
+       " (('walking', 'VBG'), None),\n",
+       " (('up', 'IN'), None),\n",
+       " (('a', 'AT'), None),\n",
+       " (('single', 'AP'), None),\n",
+       " (('flight', 'NN'), None),\n",
+       " (('of', 'IN'), None),\n",
+       " (('stairs', 'NNS'), None),\n",
+       " ((',', ','), None),\n",
+       " (('have', 'HV'), None),\n",
+       " (('balconies', 'NNS'), None),\n",
+       " (('.', '.'), None)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -388,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +448,7 @@
        " (('.', '.'), None)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +496,7 @@
        "0.8117443036755142"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -571,11 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8744798726662164\n"
+     ]
+    }
+   ],
    "source": [
     "# CD,JJ 등과 같은 '태그'를 찾는 Naive Chunk Parser의 평가에 기초한 분석\n",
     "# import nltk\n",
@@ -588,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +642,7 @@
        " 'Sweezey']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +691,7 @@
        "Tree('S', [('the', 'DT'), ('little', 'JJ'), ('cat', 'NN'), ('sat', 'VBD'), ('on', 'IN'), ('the', 'DT'), ('mat', 'NN')])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -726,24 +757,6 @@
    "source": [
     "<<<< 295 page >>>>>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -978,69 +991,6 @@
     "conlltags = [(w,t,c) for ((w,t),c) in tagsent]\n",
     "return nltk.chunk.conlltags2tree(conlltags)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
