--- a/Sklearn/01.Algorithms for Classification.ipynb
+++ b/Sklearn/01.Algorithms for Classification.ipynb
@@ -4,17 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algorithms for Classification"
+    "# Algorithms for Classification\n",
+    "\n",
+    "<img src=\"https://sebastianraschka.com/images/blog/2015/writing-pymle/is_it_worth_the_time.png\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -31,15 +24,6 @@
     "# test_iter  : 실전에 사용할 iterator 의 수를 정의\n",
     "# 출처: http://crmn.tistory.com/8 [크롬망간이 글 쓰는 공간]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -598,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Standardize Features 를 적용\n",
