--- a/3min/03.MNIST.ipynb
+++ b/3min/03.MNIST.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -60,13 +60,13 @@
    "source": [
     "# 1. 신경망 모델 구성\n",
     "# 1) .placeholder( ,[배치크기, 특성값]) : 총 784개의 특성값 (28x28 픽셀)\n",
-    "X = tf.placeholder(tf.float32, [None, 784]) \n",
-    "Y = tf.placeholder(tf.float32, [None, 10])  # target : 0 ~ 9 (10 가지 분류)"
+    "X = tf.placeholder(tf.float32)#, [None, 784]) \n",
+    "Y = tf.placeholder(tf.float32)#, [None, 10])  # target : 0 ~ 9 (10 가지 분류)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 Avg. cost = 0.405\n",
+      "Epoch: 0001 Avg. cost = 0.403\n",
       "Epoch: 0004 Avg. cost = 0.069\n",
-      "Epoch: 0007 Avg. cost = 0.031\n",
+      "Epoch: 0007 Avg. cost = 0.032\n",
       "Epoch: 0010 Avg. cost = 0.018\n",
       "Epoch: 0013 Avg. cost = 0.011\n",
       "최적화 완료!\n"
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정확도: 0.979\n"
+      "정확도: 0.9801\n"
      ]
     }
    ],
@@ -171,26 +171,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-10.6884613  -11.8164835   -3.03924012 ...,  19.36190796 -10.34820652\n",
-      "   -3.59656668]\n",
-      " [ -6.42169428  -3.068295    19.35770607 ..., -11.09740829  -6.10542965\n",
-      "  -36.0905304 ]\n",
-      " [-17.0680294   11.70736217   0.52095079 ...,  -0.10913999  -3.02745914\n",
-      "  -16.98403931]\n",
+      "[[-11.99395466  -6.32224035   0.03922328 ...,  13.91383553  -7.21484661\n",
+      "   -1.44530118]\n",
+      " [ -6.19343853   0.67496985  20.02767754 ..., -17.6771698   -9.99769783\n",
+      "  -32.17423248]\n",
+      " [-14.77683067  10.22342968  -2.68694997 ...,   1.36300766  -3.29790831\n",
+      "  -16.56941223]\n",
       " ..., \n",
-      " [-22.34352875 -12.02295494 -21.02274132 ...,  -3.55816388  -7.84017086\n",
-      "   -2.69548225]\n",
-      " [-13.52715778 -21.37237167 -20.31888771 ..., -10.68719101  -2.74584246\n",
-      "  -13.3724556 ]\n",
-      " [-12.57236671  -6.29319477 -12.4630785  ..., -25.37634087  -4.16014671\n",
-      "  -18.91115952]]\n"
+      " [-23.27232933 -13.81053734 -17.04948425 ...,  -2.30283308  -9.8710556\n",
+      "   -1.14727974]\n",
+      " [-20.48794174 -14.61124706 -19.73860359 ..., -20.9009819    3.71386433\n",
+      "  -31.9715271 ]\n",
+      " [-11.49193382 -17.12586975 -16.3478241  ..., -36.11645126  -5.89320755\n",
+      "  -18.89554214]]\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +218,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,34 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 1. 신경망 모델 구성\n",
-    "# 1) tensor 의 입력\n",
-    "X = tf.placeholder(tf.float32, [None, 784])\n",
-    "Y = tf.placeholder(tf.float32, [None, 10])\n",
-    "keep_prob = tf.placeholder(tf.float32)\n",
-    "\n",
-    "# 2) Graph 의 설계\n",
-    "W1 = tf.Variable(tf.random_normal([784, 256], stddev=0.01))\n",
-    "L1 = tf.nn.relu(tf.matmul(X, W1))\n",
-    "L1 = tf.nn.dropout(L1, keep_prob)   # 텐서플로우 내장함수로 dropout (레이어, 확율만 입력)\n",
-    "\n",
-    "W2 = tf.Variable(tf.random_normal([256, 256], stddev=0.01))\n",
-    "L2 = tf.nn.relu(tf.matmul(L1, W2))\n",
-    "L2 = tf.nn.dropout(L2, keep_prob)\n",
-    "\n",
-    "W3 = tf.Variable(tf.random_normal([256, 10], stddev=0.01))\n",
-    "model = tf.matmul(L2, W3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -313,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 Avg. cost = 0.435\n",
-      "Epoch: 0006 Avg. cost = 0.062\n",
-      "Epoch: 0011 Avg. cost = 0.035\n",
-      "Epoch: 0016 Avg. cost = 0.024\n",
+      "Epoch: 0001 Avg. cost = 0.423\n",
+      "Epoch: 0006 Avg. cost = 0.061\n",
+      "Epoch: 0011 Avg. cost = 0.033\n",
+      "Epoch: 0016 Avg. cost = 0.025\n",
       "Epoch: 0021 Avg. cost = 0.019\n",
       "Epoch: 0026 Avg. cost = 0.017\n",
       "최적화 완료!\n"
@@ -347,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정확도: 0.9827\n"
+      "정확도: 0.9844\n"
      ]
     }
    ],
@@ -379,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWQAAADSCAYAAAB9/7r8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHOVJREFUeJzt3XeYVEXWx/FvCSgqYlhcRVeZR0XFBAbWxQVkEVERcw7o\nukZcDJh1ERWMiMKKPAooyisqGAAV0y4YVhQT5pwIKiJgBCSI1vtHc+ZO9/QwM0x3V/X07/M8PDP0\nND2HO7drzq176pTz3iMiIuGtFjoAERFJ0YAsIhIJDcgiIpHQgCwiEgkNyCIikdCALCISCQ3IIiKR\niHJAds4tzPjzm3NuSOi4QnLOreGcu9M5N9M5t8A595Zzbr/QcYXmnOvlnHvdObfUOXd36Hhi4Jzb\nwDk33jm3aMX5cmzomGLhnGvpnFvinBsdOpZsGoYOIBvvfRP73DnXBJgDPBguoig0BL4E9gRmAd2A\nB5xzO3rvZ4QMLLDZwNXAPsCagWOJxVBgGbAR0AZ43Dn3tvf+/bBhRWEo8FroIKoSZYac4TBgLvBC\n6EBC8t4v8t5f6b2f4b3/3Xs/EZgO7Bo6tpC89+O89xOA70LHEgPn3Nqk3jOXe+8Xeu+nAI8CPcJG\nFp5z7mjgR2By6FiqUgwD8onA/3mt8U7jnNsI2BpQ1iMVbQ0s995/UuGxt4HtA8UTBedcU6AfcF7o\nWFYm6gHZOdeC1CX6qNCxxMQ51wi4Fxjlvf8odDwSlSbAzxmP/QSsEyCWmPQH7vTefxU6kJWJcg65\ngh7AFO/99NCBxMI5txpwD6k5wl6Bw5H4LASaZjzWFFgQIJYoOOfaAF2AnUPHUp3YB+QTgOtDBxEL\n55wD7iR1s6ab9/7XwCFJfD4BGjrnWnrvP13xWGtKe2qrE1AGzEq9hWgCNHDObee93yVgXJVEOyA7\n5/YANkXVFRXdBrQCunjvF4cOJgbOuYakzuMGpN5kjUnNoS4PG1kY3vtFzrlxQD/n3CmkqiwOAvYI\nG1lQw4ExFf5+AakBumeQaFYi5jnkE4Fx3vuSvdSqaMV8+umk3mBzKtRoHxc4tND6AIuBS4DjV3ze\nJ2hE4Z1JqgRwLnA/0LOUS96897947+fYH1LTOku89/NCx5bJqXhBRCQOMWfIIiIlRQOyiEgkNCCL\niERCA7KISCQ0IIuIRKJWdcjNmjXzZWVleQolDjNmzGD+/Pmups8vhWMCMG3atPne+w1r8lwdk+xK\n4bjo/ZNdTc+VWg3IZWVlvP7666seVRHYbbfdavX8UjgmAM65mTV9ro5JdqVwXPT+ya6m54qmLERE\nIqEBWUQkEhqQRUQioQFZRCQS0XZ7K2UDBw4EYPHiVEO3d955B4CHHnoo7Xk9e6aaVbVr1w6AHj1K\nfpcekaKmDFlEJBLKkCNy1FFHAfDgg9lbQK9orl3u9ttvB2DSpEkA7LnnngBsvvnm+QqxaHzySWpL\nuW222QaAW265BYCzzjorWEyFsGjRIgAuvPBCIDlHrBzNzq0WLVoEiE6qowxZRCQSypAjUF1mvO22\n2wKw7777AvDFF18A8OijjwLw2WefATB69GgALrvssvwFWyTefPNNAFZbLZVzbLrppiHDKZjZs2cD\nMGLECAAaNGgAUL744rHHHgOgV6/6ux3jG2+8AcChhx4KpFYPror//Oc/ALRq1QqAzTbbrO7BVUMZ\nsohIJJQhB1Jxuej48ePTvrbDDjsASQbcrFkzAJo0aQLAsmXLANh9990BePvttwH47rvv8hhxcXnr\nrbeA5JhZtlRfzZuX2o3oxBNPDBxJeE8//TQAS5curdPr2Ptv5MiRAIwZM2ZlT88JZcgiIpHIa4Zs\ndbM2nwWwySabANC4cWMAjjsutUfnxhtvDMBWW22Vz5Ci8c0335R/bvsaWmZsv+GbN2+e9d9anfKH\nH36Y9nj37t1zHmexeffddwEYMmQIACeccELIcPLOqkcmTJgAwGuvvbbS57/wwgtAcs61bt0agI4d\nO+YrxIJZvjy10fgTTzyRk9ezypSbb74ZSCpYANZee+2cfI9MypBFRCKhAVlEJBJ5nbKw4vSVlZ1Y\n4XrTpk0B2G677er0Pa005aKLLip/rLY9WgvhgAMOKP/cytbWWWcdADbYYIOV/tuxY8cCyc09SXz8\n8cdAcnlpJYX11bnnngsk5W3VGTduXNpHW0T0wAMPALDrrrvmOsSCefbZZwF46aWXALj44ovr9Hrf\nf/89AO+//z4Av/zyS/nXNGUhIlLP5TVDvuOOO4CkLAuSDPiDDz4AkgL+5557DoCXX34ZSH5zz5o1\nK+trN2rUCEhKwuwmmf37ikXcMWbIFdV0GeuNN94IJMuCjZW/2cdSNmDAACC1EwXE/7NfVd26dQOS\nm3O//fbbSp9v7xPL7GbOTG1gMX36dADatm0LwO+//577YPPMbuQeffTRQFIYUNcFUlb2VkjKkEVE\nIpHXDHmvvfZK+1iRLQM2P/zwA5BkzJbZVFXGs8YaawBJ8xhbXmzzPltuuWWdYo/JxIkTAejbty+Q\nFLxvtNFGAFx//fUArLXWWgGii4Pdp7Dzxc6LfM31hfL8888D8NFHHwFJw6mq5pDPOOMMALp27QrA\nuuuuC8AzzzwDwDXXXJP2/Ntuuw1IWrsWA/s/2ByvtRCwRUG1ZWOIHevMpl75pAxZRCQS0SydXn/9\n9QHo3Llz2uPZsuuKHn74YSDJsHfaaScgmU+qD2yZdeZSUKsgsLabpcyyGbPhhtXuuF40KlYp2Xk9\nf/78rM+1ey+HH344AFdccQVQ+erJ7lsMGzYs7fWsOmnJkiXlz7VGRHbfJgYVN2uwhSA2d2zz4avq\n6quvBpLMuFOnTgCst956dXrdmlCGLCISiWgy5NqaO3cuAGeeeSaQ3G22edbqanmLwcEHHwwkS6mN\nNZCx3+SSbHNlKtahF7tff/21/POqMmNb+mw16lZVURXLkK0S4bzzzgOS+u2Kx+/AAw8E4rovU7FV\nrcVc13lvuxK57777AGjYMDU89unTByjMFYIyZBGRSBRthjx06FAgyZRtfsfurhczq6m2FUc2d2zz\novYbe1XvItcnU6dOBeCuu+4CYOeddwZg7733DhZTIdl8qf3/q8uMM1n2e++99wLw6quv5jC63Pvp\np5+AZL1BRXa1vKqGDx8OJK1Mbc1E5n2tfFKGLCISiaLLkKdMmQIktbfmkUceAZIWlsXMmqlnzhda\nq9KY5vJCmzx5MpBU2Vh9u7V3rW8yV+S98sordXo9u/diK/SyrfyzSg2r7w3Jrha/+uqr8seOOeaY\nnLz2559/nvb3EGOJMmQRkUgUXYZsNYfW6axLly4AtGvXLlhMuWJr5221orE6yH79+hU6pOhV7JMC\ncMQRRwSKJH+sIyLUvKtbTdmmp3bOZVv5d9VVV+X0e9aFdURs06ZN+WPWy8JW2NW2wsruQ2VuMvzX\nv/51leNcVcqQRUQiUTQZ8uLFiwF46qmngKSXhf32jmkVUW3Z5qTXXnstULnPsWUDqqpIzJkzB0i2\nJLJeJoccckiwmPLFepnkglUQWLdFO+cyVazWiOm9teaaawLpW73Zqr39998fSGqqq/Lee+8ByZyx\ndb7L7Fmx2mqFz1eVIYuIRKJoMmTrBWxzXfvttx8Ae+yxR7CYcuWmm24CKteA2ko9zR1XdvfddwPw\n7bffAsn5ICtnndGsjj+T9ZEeNWpU+WPWHyMmV155ZfnnVhliVxLV9bGxen7LiKta/XjSSSfVNcxa\nU4YsIhKJ6DNk+63Xv39/IOnnevnllweLKddsm/FMlsVo7rgym/cz1i1QsrMdRqyPclVsdVqHDh3y\nHlNdtGrVqvxz2w/Qrp4z64kzWSc8Y71hMuusbb66kJQhi4hEItoM2SoPzj77bACWL18OJL/p60Pd\ncXXsGFR3l9uuGux51h3M1v0bW80GMGjQoKyvZfWnN9xwAxDvLiRWP2u6d+8eKJL8szlSqLxS78kn\nn0z7+6mnngrA7Nmzs75Gdbtf5LKio9Csj4l9rKktttgi6+NW37zjjjvWLbBaUIYsIhKJ6DJkywCs\nJ4Htimt1hzaXXAps95PqHHnkkQA0b94cSCoPxowZs8rf2/brs85ysbC6Y/s/loKKfX4z+zxb7W3m\nCr7Mv9v7qrq990qRXT1UvBKBwmbGRhmyiEgkosuQ7Q6p7SNnrBKhPnY6s3nxCRMmrNK/t7vMVbG5\n5Wwrj6wfru3ybdq3b79KseTb+PHjgeSegs0X1ud9Ba37H8CAAQOAqmtnq2Mr8KxKYcSIEUBydVWK\nbF69kLtLV0UZsohIJDQgi4hEIpopCyv079q1a9rjAwcOBOp3WdO4ceOA5HI0s7mQsYYwVd2sO/nk\nk4FkA0tz2GGHAenF9MXml19+ASqXeVm7zVy3pYxJxZ+nbWJq01uDBw+u1Wv961//AqBXr145iq74\nLVmyJO3vIRaEGGXIIiKRiCZDHjZsGFB5SazdrIlhwj3farp1vW1TXkrsxqRtZnvQQQcBcM455wSL\nKYSOHTumfbQrStug0xbMHHDAAQCcfvrpQFLSZUujJWEbxNq51bdv32CxKEMWEYlE8AzZCv1vvfXW\nwJFIzCxDnjp1auBI4mILqOyj1F7btm0B6N27NwCdO3cOFosyZBGRSATPkKdMmQLAggUL0h63pdJq\nPSki+ZTZqCokZcgiIpEIniFnsg09J0+eDNR+S28RkWKlDFlEJBLBM+RLL7007aOISKlShiwiEgmX\n2ZR5pU92bh4ws9onFrcW3vsNa/rkEjkmUIvjomOSXYkcFx2T7Gp0XGo1IIuISP5oykJEJBIakEVE\nIqEBWUQkEhqQRUQioQFZRCQSGpBFRCKhAVlEJBIakEVEIqEBWUQkEhqQRUQioQFZRCQSGpBFRCKh\nAVlEJBIakEVEIqEBWUQkEhqQRUQioQFZRCQSGpBFRCKhAVlEJBIakEVEIqEBWUQkEhqQRUQioQFZ\nRCQSGpBFRCKhAVlEJBIakEVEIqEBWUQkEhqQRUQioQFZRCQSGpBFRCKhAVlEJBIakEVEIqEBWUQk\nEhqQRUQioQFZRCQSGpBFRCKhAVlEJBIakEVEIqEBWUQkEhqQRUQioQFZRCQSGpBFRCKhAVlEJBIa\nkEVEIhHlgOyc6+Wce905t9Q5d3foeGLjnGvpnFvinBsdOpbQnHOtnHPPOOd+cs595pw7JHRMoTnn\nnltxfixc8efj0DHFoBjOlSgHZGA2cDUwMnQgkRoKvBY6iNCccw2BR4CJwAbAacBo59zWQQOLQy/v\nfZMVf7YJHUxoxXKuRDkge+/Hee8nAN+FjiU2zrmjgR+ByaFjicC2wCbAIO/9b977Z4AXgR5hw5II\nFcW5EuWALNk555oC/YDzQscSMQfsEDqICFznnJvvnHvROdcpdDCRiu5c0YBcXPoDd3rvvwodSCQ+\nBuYCFzrnGjnnugJ7AmuFDSu4i4EtgE2B4cBjzrktw4YUXFGcKxqQi4Rzrg3QBRgUOpZYeO9/BQ4G\n9gfmAOcDDwAl/QvLe/+K936B936p934UqUvzbqHjCqlYzpWGoQOQGusElAGznHMATYAGzrntvPe7\nBIwrKO/9O6QyHQCccy8Bo8JFFCVP6vK8pBXDuRJlhuyca+icaww0IDXoNF5xl7SUDQe2BNqs+HM7\n8DiwT8igQnPO7bTi/FjLOXcB0By4O3BYwTjn1nPO7WPvGefccUBH4KnQsYVWDOdKlAMy0AdYDFwC\nHL/i8z5BIwrMe/+L936O/QEWAku89/NCxxZYD+AbUvODewF7e++Xhg0pqEakSkbnAfOBs4CDvfef\nBI0qDtGfK857HzoGEREh3gxZRKTkaEAWEYmEBmQRkUhoQBYRiYQGZBGRSNSqtrdZs2a+rKwsT6HE\nYcaMGcyfP7/GRfSlcEwApk2bNt97v2FNnqtjkl0pHBe9f7Kr6blSqwG5rKyM119/fdWjKgK77bZb\nrZ5fCscEwDk3s6bP1THJrhSOi94/2dX0XNGUhYhIJDQgi4hEQgOyiEgkNCCLiERCA7KISCRKvaWl\nSEn64YcfAJg1a1bWr7do0aL880GDUnsi7LBDarejrbdO7QvaunXrfIZYkpQhi4hEougy5MceewyA\nAw88EIAhQ4YA0LNnTwAaNGgQJrAcmDt3LgBHHnkkAHvssQcAp512GpCq2ayLn376qfzz//3vfwDs\nu+++ADRq1KhOry1xmzhxIpC8f5577jkAPv3006zP32abbco/nzFjBgBLl6a3Dv79999zHKUoQxYR\niUTRZMjfffcdkGTC5qyzzgLg5JNPBmDNNdcsbGA5YPN522+/PZBkshtttBGQu8x4l12Srffmz58P\nUL5KqmXLlnX6HoXy888/A3DJJZcA8P777wMwadIkQJn+559/DsDQoUMBGD58OACLFy8GoKYbUnz8\n8cd5iE6qowxZRCQSRZMh25zn119/nfb4McccA0Djxo0LHlNdWIYKyZyxXQX885//BJL58bq6+uqr\nAZg+fXr5Y5Y5FUtmPHr0aAD69EltrZhZHWCZ8x/+8IfCBhaZr75K7Wo/ePDgVfr32267LZBUVNQn\nn332GZC898aPHw8k8+mrrZbKT8844wwguYdTyPeIMmQRkUhoQBYRiUT0UxZWamOX3Zl69OgBgHM1\nbsEahTfeeKP8c7tkMn379s3J93jvvfcAGDhwIACHHHJI+deOOuqonHyPfLNL8N69ewPJ5Wbmz9tu\n7t56660AbLDBBoUKsaDs/29TEu3btweS8sXVV18dgHXXXReAJk2aALBw4UIA9tlnHyCZkth9990B\n2HnnnYHkpvjaa6+dx/9FYbz77rtAcoNz3LhxAMybN2+l/+7ll18GkhvEVgJoxxrg3//+N5Ac71xR\nhiwiEonoM+R33nkHSM8oARo2TIW+3377FTymurDFHw8//HClr40cORKADTes8SYUWVlmvPfee6c9\nfuihh5Z/vs4669TpexSKZfd2w7MqY8aMAeDJJ58Ekpt/ljnnOpMppEWLFpV/bj/Tt99+G4AJEyak\nPbddu3YAvPnmm0BSMmk3Qf/0pz8ByQ2s+sTGCsuIx44dC6QviILkGHTo0AFIjtGNN94IwK677grA\nK6+8AiTn3hNPPFH+GrZs3G4A5kr9+6mIiBSp6DNkm/fJlJn9FYvzzz8fSMq4IFmwccQRR+Tke0yZ\nMgWAOXPmAHDSSScBcPzxx+fk9Qth5szUjjd33XVX2uOWmdiimf/+979pX7dsyDLr4447DoCNN944\nf8HmybJlywA49thjyx+zzPiyyy4DoEuXLln/beZios033zwPEcbh9NNPB5Iytsw5YjtGO+64IwDX\nXnstULlUdurUqQDcdtttQPK+eeutt4D0c+jMM88E4LDDDgPqflVrlCGLiEQi+gz5+eefT/u7zQXa\nb7liY9UBFasENt10U2DV5zltWawdE5tDs+9hc9PFxLISW/DRsWNHIDkflixZAsB9990HwHXXXQck\nxf92dXDQQQcBydxyMVRfWEWE/TytIRAkmdiFF14IwFprrVXg6MKyn/uAAQPKHxsxYgSQLAv/4x//\nCCRtFuxYVVc5YnPFy5cvB+Cqq64CksoUa7KUT8qQRUQiEW2G/NJLLwHJvI6xjKBNmzYFjylfrDVi\n165dAVhvvfWAyo2UMln9sn20+kmTqznpEKz+3LJ8q0M2Nv/3j3/8A4CHHnoISJrrWLZk50sxVVlY\n5cT1118PpDeLf+GFF4CkzrjU2LluFRGQ/KztStPuO/35z39e6Wv99ttvAHz55ZcAnHDCCQDsv//+\nQNL0Kxtb/2Dv1VxRhiwiEoloM+TXXnst6+PVZY2xO+eccwB45plnyh+bPXs2kMyP2m/8Rx55ZKWv\nZc/LXLW25ZZbAsU7zw5w//33p/398ccfB+Dggw/O+nxrI5rpL3/5C5CsWCsGdnVobBUdJDW0pcrm\nd7NtRGEr66x+2K6aPvroo7Tn2WrEDz/8MO1js2bNgOT+Qyar7IGkzj3X7V6VIYuIRKJoMmSbq7H6\nv2Jlq4BsnT0kFQVPPfUUkNxBtrvFJ554YtbXsnmsnXbaKe1xaxtomXIxsraqdpVg54NlO3b8rPbU\n5vvsPLG/W5tRO1bbbbdd3mOvK8vsjFWIQHLn37Ywq5g9l4K99toLgL/97W/lj1ktutWun3322Vn/\nra3utSw7U2ZmbKsZbYXrLbfcUv615s2b1zr2mlCGLCISiegyZFtlZvWlxu4q15c5tPXXX7/8c/tt\nbx9vuOGGGr3GF198ASRzyVZ5YqvUipmtrrKfu/UpaNWqFVB53txWbloNdvfu3QH45JNPgCS7uf32\n2/MZdk7YSjP7P1bcXNQyZOt+aL0UrGubVQxstdVWQLItmLEtr6znRbG9n2z+166MAH788UcgqUp5\n8cUXgWSzAlulaMfRVjvaXHNVbAWg3YvJdUVFNsqQRUQiEV2GbKtlMjdjLNbeFfnUr18/IMmkbO45\nV+vqQ7IVdQ8++CAAhx9+OJD0qrDzw+YL7arC6pNt3s9W8D399NNAUqcc8/z6BRdcAMBNN91U5XOs\nhtauCOxjTdn9iU6dOgFJt7xiZJmrZcjVsXrjzAy5adOmANx8880A/P3vfweyV3TkizJkEZFIRJch\nW0Zk7LffaaedFiKcKNkxGjVqFJD8Zq+PG3zaXLJVHti9BTsv7Cohs3PX5ZdfDiQ1platYc+3Yxcj\ny/Rs81vrWAfw66+/AslOKpYp15b15bZzyXYQsfra+siuIKu6GrAubxW76xWaMmQRkUhEkyHbb/zM\n6gq7C9y2bduCxxSrinWpkKy9t77K9ZFlylX1/81kd+Nt70DLkJ999lkAvv/+eyDO7m82Z2nnvFWK\nVDR58mQgyZivvPJKAF599dVafS+bi582bdoqxVoM7rjjDiCpTLFjZuzqwHobh6QMWUQkEtFkyLZ+\nP7O6wvrZSsIyZOvvanflpTKbh3300UeBZP7QdqfO1Q7fhWYr1oyt9rQM2Xos2K4Xp556KgCDBg0C\nKl+J1kd2LGyXngULFqR93faVtLnjNdZYo4DRZacMWUQkEtFkyJm7ClvnpXPPPTdEOFGyVWa25t66\nT9XnueO6sn4EF110EZD0GrY516OPPrr8uVtvvXVhg8sh66Vte+3ZPKn18vj000+BpJ9wJuslXJ/Y\nTiu264yxK0u7amrfvn1hA1sJZcgiIpGIJkO2lVRms802A0p3Z4RsLEO2lXndunVL+7rNkVmns/q8\n03BtWZ+P/v37A8m8+6WXXlr+HNsJ3Co0ion1+LCqkrFjx6Z93apLjHU+swqdmvZPKQb2Pqi4715F\ntvu6rVKMiTJkEZFIaEAWEYlE8CkLu/lg27cbWwqb6y1S6hO77LRLbStpskL3mJcHh2KNZYYNGwYk\nG2JCcuMrs+F/MbBplsGDBwPJZbst+Pj2228BKCsrA5LjYDc364OFCxcCyfTNsmXL0r7eunVrIDlG\nMVKGLCISieAZspUl2TJRa6DdsmXLYDEVixEjRgDJ0tBTTjkFSBrrSGXWmnTSpEkAtGjRovxr1tSn\nmBdNWCnkxIkTAbjnnnsAmDp1KpBkxNZ+sz6xjYO//vrrrF+3tpqZjahiogxZRCQSwTNka6RyzTXX\nAElJlxY7VDZkyBAArrjiCgA6duwIQM+ePYFkW6jVV189QHTFxUoCK258YAsFPvjgA6A4NkStjm3u\nah/rs6quDG1RUOfOnQsZzipRhiwiEongGbLZZJNNABg5cmTgSOLVoUMHIJkrk7qzxveQ3IW3ip/6\nkCGXEmupamyevJjaLyhDFhGJRDQZskgItv0VwPTp0wNGInV13nnnpX20OeXmzZsHi6m2lCGLiERC\nGbKI1Au9e/dO+1iMlCGLiETCZW6ZtNInOzcPmJm/cKLQwnu/YU2fXCLHBGpxXHRMsiuR46Jjkl2N\njkutBmQREckfTVmIiERCA7KISCQ0IIuIREIDsohIJDQgi4hEQgOyiEgkNCCLiERCA7KISCQ0IIuI\nROL/AWUvVQZhcCILAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f4b7d2dc828>"
+       "<matplotlib.figure.Figure at 0x7ff7cd97eb00>"
       ]
      },
      "metadata": {},
@@ -409,60 +393,6 @@
     "                   cmap = plt.cm.gray_r)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
